# autologic

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/autologic/: cli.py  config.py  gemini.py  localLLM.py  openai.py  reasoningEngine.py  utils.py
